--- a/main.css
+++ b/main.css
@@ -621,8 +621,9 @@ button:focus {
     }
 
     #my-details-container {
-        width: 50%;
+        width: 80%;
         margin: 10%;
+        margin-left: 6%
     }
 
     #contact-form-container {
