--- a/main.css
+++ b/main.css
@@ -623,7 +623,7 @@ button:focus {
     #my-details-container {
         width: 80%;
         margin: 10%;
-        margin-left: 6%
+        margin-left: 6%;
     }
 
     #contact-form-container {
